syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.primenumber";
option java_outer_classname = "PrimeNumberProto";

// The definition of the PrimeNumber service
service PrimeNumberService {
  rpc GiveNumbers (PrimeNumberRequest) returns (stream PrimeNumberReply) {}
}

// The request message containing the limit for the prime numbers to be generated
message PrimeNumberRequest {
  // the number defining the limit for the prime numbers
  int32 number = 1;

  // the id of the request to track the flow through all services
  string requestId = 2;
}

// The response message containing the greetings
message PrimeNumberReply {
  int32 number = 1;
}
